- Fixed bug #47029 (quoted_printable_decode() produces duplicate warning) Patch by Andy wharmby