ext/standard/quot_print.c
@@ -203,7 +203,7 @@ PHP_FUNCTION(quoted_printable_decode)
 	int arg1_len, i = 0, j = 0, k;
 
 	if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "s", &arg1, &arg1_len) == FAILURE) {
-		WRONG_PARAM_COUNT;
+		return;
 	}
     
 	if (arg1_len == 0) {
